--- a/clock.css
+++ b/clock.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: xx-large;
+    font-size: x-large;
 }
 blockquote{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
